--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.19",
     "bootstrap": "^5.3.3",
+    "leaflet": "^1.9.4",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
     "postcss-preset-env": "^9.5.5",
