--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
     "postcss-preset-env": "^9.5.5",
@@ -17,6 +19,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-heatmap-layer": "^2.0.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "tw-elements": "^2.0.0",
